--- a/paginainicial.html
+++ b/paginainicial.html
@@ -1,31 +1,46 @@
-<html>
-<!-- ####### Comments are visible in the source editor ###### -->
-<h3 style="color: #3271a2; font-size: 36px;">ATEN&Ccedil;&Atilde;O, ANTES DE USAR A P&Aacute;GINA!</h3>
-<p>A p&aacute;gina &eacute; ensaios para garantir o conte&uacute;do saud&aacute;vel para estudantes e entusiastas na educa&ccedil;&atilde;o. N&atilde;o se considera informa&ccedil;&otilde;es oficiais.</p>
-<h4></h4>
-<table class="editorDemoTable" style="vertical-align: top;">
-<thead>
-<tr>
-<td>Nomes</td>
-<td style="width: 42%;">Informa&ccedil;&otilde;es</td>
-<td style="width: 42%;">Informa&ccedil;&otilde;es</td>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="min-width: 140px;"><strong>Dados do ensino fundamental</strong></td>
-<td>Usando educa&ccedil;&atilde;o baseadas em contextos saud&aacute;veis, constroi-se a educa&ccedil;&atilde;o ideal.</td>
-<td>Lembrando de que s&atilde;o arquivos testes.</td>
-</tr>
-<tr>
-<td><strong>Ensino M&eacute;dio</strong></td>
-<td style="background-color: rgba(0,0,0,0.1);">
-<p>Usando educa&ccedil;&atilde;o baseadas em contextos saud&aacute;veis, constroi-se a educa&ccedil;&atilde;o ideal.</p>
-</td>
-<td>Lembrando de que s&atilde;o arquivos testes. Adicionar informa&ccedil;&otilde;es s&atilde;o graduais, e podem ser flexiveis.</td>
-</tr>
-</tbody>
-</table>
-<hr />
-<p></p>
-</html>
+        <main class="mdl-layout__content">
+            <div class="container">
+                <div class="banner-container">
+                    <img alt="Wiki Zone Zero Mod Banner" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi1fx0b6zFkwQ-U45g3millPHUg03_Gmc-Q9xtmTY98HWYrqrJBmgQjr-HeNZdMCrFj3R7dQHOcyEfkmPVcEShF5-1gKJLMvkI-N60JKuq7XFigE67uVlp4DaOswxBHJ6BFlZaG4MCEiimtNbLDv4Q6Z_MNk7Xuy9OmjBj-k0UD_IvnnDUXe-ZmynmypNnV/s320/Wiki_Zone_Zero_Mod_Banner.webp"/>
+                </div>
+
+                <h1>Bem-vindo ao WZZM Escolar</h1>
+                <h2>Como posso começar?</h2>
+                <p>Selecione as matérias que você deseja visualizar. O conteúdo será exibido abaixo.</p>
+
+                <div class="section">
+                    <h3>Ensino Fundamental</h3>
+                    <div class="grid">
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/linguaportuguesa.html')">Língua Portuguesa</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/matematica.html')">Matemática</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/ciencias.html')">Ciências</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/historia.html')">História</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/geografia.html')">Geografia</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/artes.html')">Artes</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/educacaofisica.html')">Educação Física</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/avancado.html')">Avançado</button>
+                    </div>
+                </div>
+
+                <div class="section">
+                    <h3>Ensino Médio</h3>
+                    <div class="grid">
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/linguaportuguesa.html')">Língua Portuguesa</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/matematica.html')">Matemática</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/ciencias.html')">Ciências</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/historia.html')">História</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/geografia.html')">Geografia</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/artes.html')">Artes</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/educacaofisica.html')">Educação Física</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/linguainglesa.html')">Língua Inglesa</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/sociologia.html')">Sociologia</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/fisica.html')">Física</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/quimica.html')">Química</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/biologia.html')">Biologia</button>
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/filosofia.html')">Filosofia</button>
+                    </div>
+                </div>
+
+                <iframe id="iframeContent" src="./paginainicial.html" frameborder="0"></iframe>
+            </div>
+        </main>
