--- a/index.html
+++ b/index.html
@@ -1,127 +1,116 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WZZM Escolar</title>
+    <title>Wiki Zone Zero Mod</title>
+    <link rel="icon" href="favicom.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <style>
-        body {
-            margin: 0;
-            background-color: #f5f5f5; /* Cor de fundo suave */
-        }
-        .container {
+        .page-content {
             padding: 20px;
-            max-width: 1200px; /* Limita a largura do conteúdo */
-            margin: auto; /* Centraliza o conteúdo */
         }
-        .mdl-layout__content {
-            padding: 20px; /* Adiciona padding ao conteúdo principal do MDL */
-        }
-        h1, h2, h3 {
-            color: #333;
-            margin-bottom: 15px;
-        }
-        p {
-            color: #555;
-            line-height: 1.6;
-        }
-        .section {
-            margin-bottom: 30px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
-        }
-        /* Estilos para os botões MDL */
-        .mdl-button.mdl-button--raised {
-            height: auto; /* Permite que o botão se ajuste ao conteúdo */
-            padding: 15px 10px; /* Ajusta o padding para um visual maior */
-            white-space: normal; /* Permite que o texto quebre linha */
-            line-height: 1.4; /* Espaçamento da linha do texto */
-            text-align: center;
-            font-size: 1rem; /* Tamanho da fonte */
-        }
-
-        #iframeContent {
+        #contentFrame {
             width: 100%;
-            height: calc(100vh - 350px); /* Ajusta a altura para caber o banner e o rodapé */
+            height: calc(100vh - 200px);
             border: none;
-            margin-top: 30px;
-            background-color: #f0f0f0; /* Cor de fundo para o iframe */
         }
 
-        /* Estilos para o rodapé */
-        footer {
-            margin-top: 40px;
-            padding: 20px;
-            text-align: center;
-            color: #777;
-            background-color: #f0f0f0;
-            border-top: 1px solid #eee;
-        }
-        footer a {
-            color: #3f51b5; /* Cor do link do MDL */
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
+        /* Estilos adicionais para os links do menu lateral quando desabilitados */
+        .mdl-navigation__link.disabled {
+            cursor: not-allowed;
+            opacity: 0.6;
+            color: #777 !important; /* Adicionado !important para sobrepor estilos do MDL */
+            pointer-events: none; /* Impede cliques */
         }
 
-        /* Estilo para o banner (adaptado do seu outro código) */
-        .banner-container {
-            clear: both;
-            text-align: center;
-            margin-bottom: 20px;
+        /* Estilos para a imagem de perfil e ícone do Google Apps */
+        #user-profile-pic {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%; /* Torna a imagem circular */
+            margin-right: 8px; /* Espaçamento entre a imagem e o texto */
+            object-fit: cover; /* Garante que a imagem preencha o espaço sem distorcer */
         }
-        .banner-container img {
-            max-width: 100%;
-            height: auto;
-            border: 0;
-            display: block;
-            margin: 0 auto; /* Centraliza a imagem */
+        #google-apps-button {
+            /* Ajustes para o botão de ícone */
+            min-width: 32px; /* Garante tamanho mínimo para o ícone */
+            height: 32px;
+            padding: 0;
+            display: flex; /* Para centralizar o ícone */
+            align-items: center;
+            justify-content: center;
         }
-        .mdl-layout__header-row #user-info {
-            color: white; /* Garante que o texto seja visível no cabeçalho */
-            margin-right: 16px;
-        }
-        .mdl-layout__drawer .mdl-navigation__link {
-            color: #424242; /* Cor padrão dos links do drawer */
+        /* Estilos para o pop-up dos serviços Google */
+        #google-apps-popup a.mdl-button {
+            margin-bottom: 4px; /* Espaçamento entre os botões de serviço */
+            justify-content: flex-start; /* Alinha o texto à esquerda */
         }
     </style>
 </head>
 <body>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-analytics-compat.js"></script>
+
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
-                <span class="mdl-layout-title">WZZM Escolar</span>
+                <span class="mdl-layout-title">Wiki Zone Zero Mod</span>
                 <div class="mdl-layout-spacer"></div>
-                <div id="user-info" class="mdl-typography--body-1-force-preferred-font-color-contrast"></div>
-                <button id="login-google" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="display: none;">
-                    <i class="material-icons">account_circle</i> Login com Google
-                </button>
-                <button id="logout-button" class="mdl-button mdl-js-button mdl-button--accent" style="display: none;">
-                    <i class="material-icons">exit_to_app</i> Sair
-                </button>
+                <div style="position: relative; display: flex; align-items: center;">
+                    <button class="mdl-button mdl-js-button mdl-button--icon" id="google-apps-button" style="display: none; margin-right: 8px;">
+                        <i class="material-icons">apps</i>
+                    </button>
+                    <div id="google-apps-popup" style="
+                        display: none;
+                        position: absolute;
+                        top: 48px; /* Ajuste a posição vertical conforme necessário */
+                        right: 0;
+                        background-color: white;
+                        border: 1px solid #ccc;
+                        box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+                        z-index: 100;
+                        padding: 10px;
+                        min-width: 180px;
+                        border-radius: 4px;
+                    ">
+                        <a href="https://mail.google.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">Gmail</a>
+                        <a href="https://drive.google.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">Drive</a>
+                        <a href="https://calendar.google.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">Agenda</a>
+                        <a href="https://photos.google.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">Fotos</a>
+                        <a href="https://www.youtube.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">YouTube</a>
+                        <hr style="border: 0; border-top: 1px solid #eee; margin: 8px 0;">
+                        <a href="https://myaccount.google.com/" target="_blank" class="mdl-button mdl-js-button mdl-button--flat">Minha Conta Google</a>
+                        </div>
+                    <div id="user-info-container" style="display: flex; align-items: center;">
+                        <img id="user-profile-pic" src="" alt="Foto de Perfil" style="display: none;">
+                        <div id="user-info" class="mdl-typography--body-1-force-preferred-font-color-contrast"></div>
+                    </div>
+                </div>
             </div>
         </header>
 
         <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Menu Principal</span>
+            <span class="mdl-layout-title">Menu</span>
             <nav class="mdl-navigation" id="main-navigation">
-                <a class="mdl-navigation__link" href="#" onclick="loadPage('paginainicial.html')">Página Inicial</a>
-                <a class="mdl-navigation__link" href="#" onclick="loadPage('sobre.html')">Sobre</a>
-                <a class="mdl-navigation__link" href="#" onclick="loadPage('contato.html')">Contato</a>
-                </nav>
+                <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="artigos.html">Artigos</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="artigosdesaudementalgerados.html">Artigos Automáticos de Ensaio</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="imagens.html">Imagens</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="contato.html">Contato</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="./buscaavancada/index.html">Busca Avançada</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="ferramentasuteis.html">Ferramentas Úteis</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/">Página do Usuário</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/denunciar/">Rastrear usuário / Denunciar</a> 
+                <a class="mdl-navigation__link" href="#" data-page-src="./Termos/distopiadainformacao.html">Introdução da Distopia da Informação</a> 
+                <a class="mdl-navigation__link" href="#" data-page-src="servicoswzzm.html">Outros serviços da Wiki Zone Zero Mod</a> 
+                <a class="mdl-navigation__link" href="#" data-page-src="visualizarnoticias.html">Visualizar Noticias</a> 
+
+                <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" target="_blank">Políticas da WZZM</a>
+            </nav>
         </div>
 
         <main class="mdl-layout__content">
