--- a/index.html
+++ b/index.html
@@ -97,66 +97,25 @@
             <span class="mdl-layout-title">Menu</span>
             <nav class="mdl-navigation" id="main-navigation">
                 <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="artigos.html">Artigos</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="artigosdesaudementalgerados.html">Artigos Automáticos de Ensaio</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="imagens.html">Imagens</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="contato.html">Contato</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./buscaavancada/index.html">Busca Avançada</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="ferramentasuteis.html">Ferramentas Úteis</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/">Página do Usuário</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/denunciar/">Rastrear usuário / Denunciar</a> 
-                <a class="mdl-navigation__link" href="#" data-page-src="./Termos/distopiadainformacao.html">Introdução da Distopia da Informação</a> 
-                <a class="mdl-navigation__link" href="#" data-page-src="servicoswzzm.html">Outros serviços da Wiki Zone Zero Mod</a> 
-                <a class="mdl-navigation__link" href="#" data-page-src="visualizarnoticias.html">Visualizar Noticias</a> 
 
                 <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" target="_blank">Políticas da WZZM</a>
             </nav>
         </div>
 
         <main class="mdl-layout__content">
-            <div class="container">
-                <div class="banner-container">
-                    <img alt="Wiki Zone Zero Mod Banner" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi1fx0b6zFkwQ-U45g3millPHUg03_Gmc-Q9xtmTY98HWYrqrJBmgQjr-HeNZdMCrFj3R7dQHOcyEfkmPVcEShF5-1gKJLMvkI-N60JKuq7XFigE67uVlp4DaOswxBHJ6BFlZaG4MCEiimtNbLDv4Q6Z_MNk7Xuy9OmjBj-k0UD_IvnnDUXe-ZmynmypNnV/s320/Wiki_Zone_Zero_Mod_Banner.webp"/>
+            <div class="page-content">
+                <div class="separator" style="clear: both; text-align: center;">
+                    <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi1fx0b6zFkwQ-U45g3millPHUg03_Gmc-Q9xtmTY98HWYrqjJBmgQjr-HeNZdMCrFj3R7dQHOcyEfkmPVcEShF5-1gKJLMvkI-N60JKuq7XFigE67uVlp4Da0sMXBHJ6BFlZaG4MCEiimtNbLDv4Q6Z_MNk7Xuy9OmjBj-k0UD_IvnnDUXe-ZmynmypNnV/s2833/Wiki_Zone_Zero_Mod_Banner.webp" style="display: block; padding: 1em 0;">
+                        <img alt="" border="0" width="320" data-original-height="873" data-original-width="2833" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi1fx0b6zFkwQ-U45g3millPHUg03_Gmc-Q9xtmTY98HWYrqjJBmgQjr-HeNZdMCrFj3R7dQHOcyEfkmPVcEShF5-1gKJLMvkI-N60JKuq7XFigE67uVlp4DaOswxBHJ6BFlZaG4MCEiimtNbLDv4Q6Z_MNk7Xuy9OmjBj-k0UD_IvnnDUXe-ZmynmypNnV/s320/Wiki_Zone_Zero_Mod_Banner.webp"/>
+                    </a>
                 </div>
-
-                <h1>Bem-vindo ao WZZM Escolar</h1>
-                <h2>Como posso começar?</h2>
-                <p>Selecione as matérias que você deseja visualizar. O conteúdo será exibido abaixo.</p>
-
-                <div class="section">
-                    <h3>Ensino Fundamental</h3>
-                    <div class="grid">
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/linguaportuguesa.html')">Língua Portuguesa</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/matematica.html')">Matemática</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/ciencias.html')">Ciências</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/historia.html')">História</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/geografia.html')">Geografia</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/artes.html')">Artes</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/educacaofisica.html')">Educação Física</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinofundamental/avancado.html')">Avançado</button>
-                    </div>
+                <iframe id="contentFrame" src="recepcao.html"></iframe>
+                <div id="access-denied-message" style="text-align: center; padding: 50px; font-size: 20px; color: #666; display: none;">
+                    Você precisa estar logado para acessar esta página.
                 </div>
-
-                <div class="section">
-                    <h3>Ensino Médio</h3>
-                    <div class="grid">
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/linguaportuguesa.html')">Língua Portuguesa</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/matematica.html')">Matemática</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/ciencias.html')">Ciências</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/historia.html')">História</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/geografia.html')">Geografia</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/artes.html')">Artes</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/educacaofisica.html')">Educação Física</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/linguainglesa.html')">Língua Inglesa</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/sociologia.html')">Sociologia</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/fisica.html')">Física</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/quimica.html')">Química</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/biologia.html')">Biologia</button>
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="loadContent('ensinomedio/filosofia.html')">Filosofia</button>
-                    </div>
+                <div id="banned-message" style="text-align: center; padding: 50px; font-size: 20px; color: red; display: none;">
+                    Sua conta foi banida. Você não pode usar os recursos do site.
                 </div>
-
-                <iframe id="iframeContent" src="./paginainicial.html" frameborder="0"></iframe>
             </div>
         </main>
 
